# Volatility-Regime-Momentum

./: .gitignore  DATA_SETUP.md  Dockerfile  LICENSE  README.md  conditional_fama_macbeth_analyzer.py  data_collector.py  data_collector_50stocks.py  factor_selector.py  fama_macbeth_analyzer.py  industry_classifier.py  model_grid_search.py  predictive_model.py  pyproject.toml  regime_difference_analyzer.py  regime_factor_selector.py  regime_model_grid_search.py  regime_model_sensitivity.py  requirements-dev.txt  requirements.txt  requirements_temp.txt  run_full_pipeline.py  simple_factor_calculator.py  single_factor_ic_analyzer.py  stock_universe.csv  stock_universe_selected.csv  universe_selector.py  volatility_regime_analyzer.py
.claude/: settings.local.json
.github/workflows/: ci.yml
analysis/: cost_sensitivity_grid.py  execution_strategies.py  industry_neutral_validator.py  model_enhancement_runner.py  performance_reporter.py  performance_summary.py  report_packager.py  robustness_validator.py  standardization_comparison.py  turnover_strategy_grid.py  turnover_visuals.py
app/: streamlit_app.py
cache/: download_status.json
data/: 000002.csv  000021.csv  000061.csv  000065.csv  000099.csv  000166.csv  000333.csv  000519.csv  000536.csv  000537.csv  000547.csv  000552.csv  000564.csv  000567.csv  000617.csv  000629.csv  000651.csv  000700.csv  000723.csv  000733.csv  000756.csv  000758.csv  000786.csv  000795.csv  000807.csv  000811.csv  000837.csv  000878.csv  000880.csv  000895.csv  000898.csv  000983.csv  000999.csv  001203.csv  001212.csv  001339.csv  001696.csv  001914.csv  001979.csv  002006.csv  (+321 more)
data/config_snapshots/: default_hysteresis_top40_5bp.json
docs/: FILE_FORMATS.md  RESEARCH.md  TECHNICAL.md  USER_GUIDE.md
scripts/: archive_old_outputs.py  build_universe.py  cleanup_repo.py  restore_data.py  validate_industries.py
tests/: test_event_logic.py  test_portfolio_timeseries.py  test_smoke_files.py
tests/e2e/: test_pipeline_cli.py
